--- a/public/.vscode/launch.json
+++ b/public/.vscode/launch.json
@@ -4,12 +4,11 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "file:///C:/Users/74265/myApp/public/Symbolic.html",
+            "name": "启动 Chrome 并打开 localhost",
+            "url": "http://localhost:8080",
             "webRoot": "${workspaceFolder}"
         }
     ]
